# openglSimpleEnginetut

./: CMakeLists.txt  READme.txt
res/: Shader_1.fs  Shader_1.vs  crosshairShader.fs  crosshairShader.vs  lineBatchShader.fs  lineBatchShader.vs
src/: main.cpp
src/graphics/: LineBatch.cpp  LineBatch.h  Mesh.cpp  Mesh.h  ShaderCl.cpp  ShaderCl.h  Texture.cpp  Texture.h  VoxelRenderer.cpp  VoxelRenderer.h
src/loaders/: png_loading.cpp  png_loading.h
src/voxels/: Chank.h  Chunk.cpp  Chunk.h  Chunks.h
src/window/: Camera.cpp  Camera.h  Events.cpp  Events.h  window.cpp  window.h
